@@ -35,4 +35,5 @@ Mod(Mod(0, 1267650600228229401496703205653), Mod(1, 126765060022822940149670
 8391139862076816170261639908101111519233533818009116577269022156451759608638
 2788345856, [2, 66; 3, 6; 13, 20; 131, 2; 233, 4; 547, 2; 4441, 4; 60527, 4;
  163561, 2; 647113, 4; 314542445630843, 2]]
-Total time spent: 56
+2*a + 1
+Total time spent: 91
