@@ -35,3 +35,5 @@ poldiscfactors(T,1)
 
 T=y^24+4*y^23-14*y^22-72*y^21+79*y^20+596*y^19-26*y^18-2440*y^17-913*y^16+6004*y^15+4594*y^14-6872*y^13-3220*y^12+14436*y^11+20340*y^10+10564*y^9+21950*y^8+28292*y^7+38580*y^6+31312*y^5+64413*y^4+46004*y^3+48710*y^2+18852*y+22307;
 poldiscfactors(T)
+
+a=ffgen(3^2,'a);poldisc(x^6+a*x+y)
